# codex-warp-gui

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
.beads/: issues.jsonl
e2e/: fixtureServer.ts  remote-smoke.spec.ts
server/: Cargo.toml
server/src/: main.rs
src/: App.css  App.tsx  CodeFrame.tsx  CwdShell.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
